--- a/CornFrontend/package.json
+++ b/CornFrontend/package.json
@@ -12,29 +12,40 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor-community/camera-preview": "^5.0.0",
+    "@capacitor/android": "5.5.1",
     "@capacitor/app": "5.0.6",
-    "@capacitor/core": "5.5.1",
+    "@capacitor/camera": "^5.0.7",
+    "@capacitor/core": "^5.5.1",
+    "@capacitor/filesystem": "^5.1.4",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^7.0.0",
     "@ionic/react-router": "^7.0.0",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "formik": "^2.4.5",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-use": "^17.4.2",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.5.1",
+    "@capacitor/cli": "^5.5.1",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
@@ -42,7 +53,7 @@
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
