--- a/CornFrontend/tsconfig.json
+++ b/CornFrontend/tsconfig.json
@@ -4,14 +4,14 @@
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
+    "skipLibCheck": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false, // Set to true in production
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "resolveJsonModule": true,
+    "resolveJsonModule": false, // Set to true if using JSON modules
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
