--- a/CornFrontend/package.json
+++ b/CornFrontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CornFrontend",
+  "name": "cornfrontend",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -23,15 +23,20 @@
     "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/pwa-elements": "^3.2.2",
-    "@ionic/react": "^7.0.0",
+    "@ionic/react": "^7.6.0",
     "@ionic/react-router": "^7.0.0",
     "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.14.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.2",
+    "express": "^4.18.2",
     "formik": "^2.4.5",
     "ionicons": "^7.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-query": "^3.39.3",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
@@ -44,6 +49,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-legacy": "^5.0.0",
@@ -51,11 +57,17 @@
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.7.0",
     "jsdom": "^22.1.0",
     "terser": "^5.4.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": ".eslintrc.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
